# hydra-bot

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: d_loop.rs  game.rs  main.rs  net_client.rs  net_packet.rs  net_structs.rs
src/net/: client.rs  mod.rs  packet.rs
