[package]
name = "hydra-bot"
version = "0.0.1"
edition = "2021"
authors = ["Cainã Costa <me@cfcosta.com>"]

[dependencies]
argh = "0.1.10"
bincode = "1.3.3"
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
sha1 = "0.10.6"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
